product_docs/docs/bart/2.5/bart_user/02_overview/01_block-level_incremental_backup/05_restoring_an_incremental_backup.mdx
---
title: "Restoring an Incremental Backup"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.1/restoring_an_incremental_backup.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.2/restoring_an_incremental_backup.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.4/restoring_an_incremental_backup.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.3/restoring_an_incremental_backup.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.5/restoring_an_incremental_backup.html"
  - "/edb-docs/d/edb-backup-and-recovery-tool/user-guides/backup-recovery-guide/2.5.7/restoring_an_incremental_backup.html"
---

<div id="restoring_an_incremental_backup" class="registered_link"></div>

Restoring an incremental backup may require additional steps depending upon the host on which the incremental backup is to be restored:

-   [Restoring an Incremental Backup on a BART Host](#restoring-an-incremental-backup-on-a-bart-host) - This section outlines restoring an incremental backup onto the same host where BART has been installed.
-   [Restoring an Incremental Backup on a Remote Host](#restoring-an-incremental-backup-on-a-remote-host) - This section outlines restoring an incremental backup onto a remote host where BART has not been installed.

<div id="restoring_an_incremental_backup_on_a_bart_host" class="registered_link"></div>

## Restoring an Incremental Backup on a BART Host

Specify a backup identifier or name, and include the `-i` option when invoking the `RESTORE` subcommand to restore an incremental backup. All `RESTORE` options may be used in the same manner as when restoring a full backup. See [RESTORE](../../03_using_bart/03_basic_bart_subcommand_usage/08_restore/#restore) command for more details.

First, all files from the full backup from the beginning of the backup chain are restored. For each incremental backup, the CBM file is used to identify and restore blocks from the incremental backup. If there are new relations or databases identified in the CBM file, then relevant relation files are copied. If consolidated block map information is found indicating the drop of a relation or a database, then the relevant files are removed from the restore directory. Similarly, if there is any indication of a table truncation, then the related files are truncated.

Also note that you can use the `-w` option of the `RESTORE` subcommand to specify a multiple number of parallel worker processes to stream the modified blocks to the restore host.

<div id="restoring_an_incremental_backup_on_a_remote_host" class="registered_link"></div>

## Restoring an Incremental Backup on a Remote Host

Ensure the `bart` program is available on the remote host when restoring an incremental backup on a remote host; the invocation of the `RESTORE` subcommand for an incremental backup results in the execution of the `bart` program on the remote host to restore the modified blocks to their proper location.

To restore an incremental backup onto a remote host where BART has not been installed, perform the following steps:

**Step 1:** Install `BART` on the remote host to which an incremental backup is to be restored.

No editing is needed in the `bart.cfg` file installed on the remote host.

**Step 2:** Determine the Linux operating system user account on the remote host to be used as the remote user. This user is specified by the `remote_host` parameter in the BART configuration file or by the `-r` option when using the `RESTORE` subcommand to restore the incremental backup. The remote user must be the owner of the directory where the incremental backup is to be restored on the remote host. By default, the user account is `enterprisedb` for Advanced Server or `postgres` for PostgreSQL.

**Step 3:** Ensure a passwordless SSH/SCP connection is established from the BART user on the BART host to the remote user on the remote host. For information about creating a passwordless SSH/SCP connection, see the *EDB Backup and Recovery Installation and Upgrade Guide*, available at the [EDB website](/bart/latest/bart_inst/).

When restoring an incremental backup, specify the backup identifier or name of the incremental backup that will be restored. See the [RESTORE](../../03_using_bart/03_basic_bart_subcommand_usage/08_restore/#restore) documentation for more details. To view an example of restoring an incremental backup, see the *EDB Backup and Recovery Reference Guide* available at the [EDB website](/bart/latest/bart_ref/).
